--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -141,10 +141,9 @@
 \cfinput{casosUso/Cliente/CUCLIndex}
 \newpage
 %------------------------------------------------------------------------------------------------------------------------------------
-
-%\chapter{Casos de Uso}
-
-
+\chapter{Mensajes}
+\cfinput{casosUso/Mensajes/mensajes}
+%------------------------------------------------------------------------------------------------------------------------------------
 
 %\include{archivosTex/requerimientos}
 %\include{archivosTex/adv-clasificadores}
