--- a/TT-2016-B045/casosUso/Cliente/CUCL1.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCL1.tex
@@ -31,7 +31,7 @@
 		}
 	\UCitem{Mensajes}{
 		\begin{itemize}	
-			\item \MSGref{MSG-SLL1}{Generación de llaves}
+			\item \MSGref{MSG-CL1}{Carpeta vacía} 
 			\item \MSGref{MSG-CL2}{Archivo incomplatible}
 			\item \MSGref{MSG-CL3}{Número incorrecto}
 			\item \MSGref{MSG-CL4}{Error al generar la llave}.
