--- a/TT-2016-B045/casosUso/Mensajes/mensajes.tex
+++ b/TT-2016-B045/casosUso/Mensajes/mensajes.tex
@@ -25,49 +25,49 @@ Parámetros más comunes: \\
 \begin{Message}{MSG-SLL1}{Generación de llaves} 
 	\MSGitem[Tipo: ] Notificación
 	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Redacción: ] La generación exitosa de llaves del servidor.
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
 \begin{Message}{MSG-SLL2}{Números iguales} 
-	\MSGitem[Tipo: ] Notificación
-	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Tipo: ] Error
+	\MSGitem[Objetivo: ] Notificar al actor que los números aleatorios elegidos se encuentran repetidos.
+	\MSGitem[Redacción: ] Los números aleatorios se encuentran repetidos o no son primos.
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
 \begin{Message}{MSG-SLL3}{Número incorrecto} 
-	\MSGitem[Tipo: ] Notificación
-	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Tipo: ] Error
+	\MSGitem[Objetivo: ] Notificar al actor que el número elegido no cumple con las caracteristicas especificas.
+	\MSGitem[Redacción: ] El número aleatorio no cumple con las especificaciones.
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
 \begin{Message}{MSG-N1}{Archivo no encontrado} 
 	\MSGitem[Tipo: ] Notificación
-	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Objetivo: ] Notificar al usuario que el archivo enviado no existe almacenado en la nube.
+	\MSGitem[Redacción: ] El archivo solicitado no existe.
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
 \begin{Message}{MSG-CL1}{Carpeta vacía} 
 	\MSGitem[Tipo: ] Notificación
-	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Objetivo: ] Notificar al usuario que su carpeta personal no tiene archivos
+	\MSGitem[Redacción: ] La carpeta personal se encuentra sin archivos.
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
 \begin{Message}{MSG-CL2}{Archivo incompatible} 
-	\MSGitem[Tipo: ] Notificación
-	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Tipo: ] Error
+	\MSGitem[Objetivo: ] Notificar al usuario que el archivo que intenta subir no es válido
+	\MSGitem[Redacción: ] El archivo no es compatible con el almacenamiento.
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
 \begin{Message}{MSG-CL3}{Número incorrecto} 
 	\MSGitem[Tipo: ] Notificación
-	\MSGitem[Objetivo: ] Notificar al actor que la operación se ha realizado de forma exitosa.
-	\MSGitem[Redacción: ]
+	\MSGitem[Objetivo: ] Notificar al actor que el número aleatorio no esta dentro del rango de tamaño.
+	\MSGitem[Redacción: ] El número aleatorio no se encuentra dentro del rango establecido. 
 	\MSGitem[Ejemplo: ] 
 \end{Message}
 
