--- a/TT-2016-B045/casosUso/Nube/CUN3.tex
+++ b/TT-2016-B045/casosUso/Nube/CUN3.tex
@@ -35,7 +35,7 @@
 		}
 	\UCitem{Mensajes}{
 		\begin{itemize}	
-			\item \MSGref{MSG-SLL1}{Generación de llaves}
+			\item \MSGref{MSG1}{Operación exitosa}.
 		\end{itemize}
 		}
 \end{UseCase}
