--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -1,27 +1,6 @@
 %\chapter{Introducci\'on} % (fold)
 %\label{cha:introduccion}
 %\addcontentsline{toc}{chapter}{Introducción}
-\section{Definiciones, acrónimos y abreviaturas}
-
-\textbf{Acrónimos}
-\begin{itemize}
-\item HP: Hewllet-Packard.
-\item DupLESS: Server-Aided Encryption for Deduplicated Storage (Cifrado Asistido por un Servidor para Almacenamiento Sin Duplicados).
-\item ABS: The Apportioned Backup System (Sistema de Respaldo Asignado).
-\item SIGOPS: Special Interest Group on Operating Systems (Grupo de Interés Especial sobre Sistemas Operativos).
-\item TahoeFS: The Least-Authority Filesystem (Sistema de Archivos de Menor Autoridad).
-\item AES: Advanced Encryption Standard (Estándar de Cifrado Avanzado).
-\item DES: Data Encryption Standard (Estándar de Cifrado de Datos).
-\item RSA: Rivest Shamir Adleman.
-\item MD: Message Digest (Resumen del Mensaje).
-\item SHA: Secure Hash Algorithm (Algoritmo Seguro de Hash).
-\item NIST: National Institute of Standards and Technology (Instituto Nacional de Estándares y Tecnología).
-\item SaaS: Software as a Service (Software como Servicio).
-\item PaaS: Platform as a Service (Plataforma como Servicio).
-\item IaaS: Infracstructure as a Service (Infraestructura como Servicio).
-\item API: Application Programming Interface (Interfaz de Programación de Aplicaciones).
-\item BPMN: Business Process Model and Notation (Modelo de Proceso Empresarial y Notación). 
-\end{itemize}
 
 \section{Contexto}
 
@@ -87,33 +66,6 @@ Promete el almacenamiento de datos seguro y eficiente, privacidad y seguridad, e
 Además es tolerante a fallas catastróficas a nodos y permite unir nodos y restaurar operaciones sin pérdida de datos~\cite{abs}.
 \end{itemize}
 
-\section{Solución propuesta}
-La eliminación de duplicación de datos es una experiencia progresiva que puede disminuir drásticamente la cantidad de información de respaldo almacenada eliminando todos los datos redundantes como se ilustra en la figura ~\ref{fig:1-3-1}. Al evitar la duplicación de datos explota el consumo de almacenamiento mientras que permite a las tecnologías de información recuperar más datos de respaldo de líneas cercanas durante más tiempo. Esto recupera enormemente la capacidad del disco de copia de seguridad establecida, alterando la forma en que los datos están protegidos. En general,
-la eliminación de duplicados compara la información nueva con la información actual de los trabajos anteriores de copia de seguridad o archivado y elimina las redundancias en la nube reduciendo la asignación de almacenamiento dentro de esta, puede reducir las necesidades de almacenamiento en hasta un \textit{80\%} para archivos y copias de seguridad que los usuarios resguardan en la nube. Las ventajas de no tener duplicados en la nube incluyen una mayor capacidad de almacenamiento y ahorro presupuestario, al igual que la minimización del ancho de banda para menos costosa y más rápida la repetición de la información fuera de la reserva simplificando y mejorando la gestión del almacenamiento de datos  ~\cite{rededup}. 
-
-
-\begin{figure}[H]
-\centering
-	\includegraphics[width=10cm, height=5cm]{./images/Deduplicacion.jpg}
-	\caption{Solución Propuesta}
-	\label{fig:1-3-1}
-\end{figure}
-
-El objetivo es almacenar más datos en menos espacio mediante la segmentación de los archivos en pequeños trozos de tamaño variable\textit{(32 a 128 KB)}, la identificación de fragmentos duplicados, manteniendo una sola copia de cada trozo. Las copias repetidas del trozo se sustituyen por una referencia a la única copia. Los trozos se comprimen y luego son organizados en contenedores especiales de archivos en la carpeta Información del volumen del sistema. Para garantizar la privacidad de los datos obtenidos después del proceso de eliminación de duplicación, es posible utilizar algoritmos criptográficos ~\cite{microsoft}.
-\\ \\ 
-Una posible solución para la protección a los datos y eliminar duplicaciones de estos, es echar mano de la criptografía. Ciencia que se encarga del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, el objetivo de la Criptografía no es sólo mantener los datos secretos, sino también protegerlos contra modificación o manipulación y comprobar la fuente de los mismos ~\cite{fundamentos}. 
-\\  \\
-Está ciencia que matiene la información segura se encuentra dividida en dos grandes tipos: \textbf{Criptográfia simétrica} y la \textbf{Criptografía asimétrica}.  
-
-\begin{itemize} 
-   \item \textit{La criptografía simétrica} o también llamada criptografía de llave privada, basa su seguridad en una sóla llave que se comparte entre dos usuarios que quieren compartir información, dicha llave es utilizada para cifrar un archivo al ser enviado al otro usuario y este utilizará la misma llave para descifrarlo cuando lo reciba. 
-\item \textit{La criptografía asimétrica} o criptografía de llave pública involucra el uso de un par de llaves para cada usuario que desea comunicarse, estas llaves llamadas pública y privada. Para que un usuario envíe un archivo a otro usuario necesita cifrar el archivo con la llave pública de ese usuario al que se desea enviar, y cuando lo reciba ese usuario lo deberá descifrar con su llave privada o secreta. De esta manera se evita el compartir llaves para cifrar y descifrar como sucede en la criptografía simétrica y reduce los riesgos de un ataque de adversarios. 
- \end{itemize}
-
-Puesto que ambas cuestiones, la eliminación de duplicados y la privacidad de la información, son importantes, se ha comenzado a
-proponer mecanismos que solucionen ambos problemas de manera conjunta, que son: Dupless ~\cite{Bellare}, ABS: the apportioned backup
-system. ~\cite{abs}, Flud Backup ~\cite{flud}, SIGOPS Oper. Syst. ~\cite{sigops}, TahoeFS ~\cite{tahoe}.
-
 \section{Justificación}
 
 En la actualidad millones de personas usan los servicios de almacenamiento que ofrece la nube, ya sean gratuitos o privados, este número de personas ha ido en un incremento exponencial lo cual hace que el espacio de almacenamiento disminuya, entonces ¿Cómo podría mitigar el problema de almacenamiento y tener privacidad de los datos al mismo tiempo?
@@ -128,6 +80,34 @@ Si bien esta solución se ocupa de la duplicación de archivos deja muy vulnerab
 
 Es por ello que este trabajo terminal tiene como principal meta atacar esta problemática de privacidad, proponiendo una arquitectura del sistema que a través de un servidor de llaves se generaran llaves de acuerdo al contenido del archivo, para con esta se pueda cifrar y luego almacenar en la nube donde se eludirá la duplicación de archivos. Dicha arquitectura se explica con detalle en el siguiente apartado.
 
+\section{Solución propuesta}
+La eliminación de duplicación de datos es una experiencia progresiva que puede disminuir drásticamente la cantidad de información de respaldo almacenada eliminando todos los datos redundantes como se ilustra en la figura ~\ref{fig:1-3-1}. Al evitar la duplicación de datos explota el consumo de almacenamiento mientras que permite a las tecnologías de información recuperar más datos de respaldo de líneas cercanas durante más tiempo. Esto recupera enormemente la capacidad del disco de copia de seguridad establecida, alterando la forma en que los datos están protegidos. En general,
+la eliminación de duplicados compara la información nueva con la información actual de los trabajos anteriores de copia de seguridad o archivado y elimina las redundancias en la nube reduciendo la asignación de almacenamiento dentro de esta, puede reducir las necesidades de almacenamiento en hasta un \textit{80\%} para archivos y copias de seguridad que los usuarios resguardan en la nube. Las ventajas de no tener duplicados en la nube incluyen una mayor capacidad de almacenamiento y ahorro presupuestario, al igual que la minimización del ancho de banda para menos costosa y más rápida la repetición de la información fuera de la reserva simplificando y mejorando la gestión del almacenamiento de datos  ~\cite{rededup}. 
+
+
+Una posible solución para la protección a los datos y eliminar duplicaciones de estos, es echar mano de la criptografía. Ciencia que se encarga del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, el objetivo de la Criptografía no es sólo mantener los datos secretos, sino también protegerlos contra modificación o manipulación y comprobar la fuente de los mismos ~\cite{fundamentos}. \\   
+Está ciencia que matiene la información segura se encuentra dividida en dos grandes tipos: \textbf{Criptográfia simétrica} y la \textbf{Criptografía asimétrica}.  
+\begin{itemize} 
+   \item \textit{La criptografía simétrica} o también llamada criptografía de llave privada, basa su seguridad en una sóla llave que se comparte entre dos usuarios que quieren compartir información, dicha llave es utilizada para cifrar un archivo al ser enviado al otro usuario y este utilizará la misma llave para descifrarlo cuando lo reciba. 
+\item \textit{La criptografía asimétrica} o criptografía de llave pública involucra el uso de un par de llaves para cada usuario que desea comunicarse, estas llaves llamadas pública y privada. Para que un usuario envíe un archivo a otro usuario necesita cifrar el archivo con la llave pública de ese usuario al que se desea enviar, y cuando lo reciba ese usuario lo deberá descifrar con su llave privada o secreta. De esta manera se evita el compartir llaves para cifrar y descifrar como sucede en la criptografía simétrica y reduce los riesgos de un ataque de adversarios. 
+ \end{itemize}
+
+El objetivo de esta propuesta de solución es almacenar más datos en menos espacio mediante el uso de la criptografía. Esta ciencia nos proveerá con sus herramientas para la creación de un llavero criptográfico, dicho llavero realizará una firma la cuál dará paso a la creación de una llave correspondiente a un archivo \textit{F} que se desee almacenar un usuario, si se llega a solicitar al llavero por un usuario diferente una nueva firma para la creación de una llave para el mismo archivo \textit{F}, esta llave será la misma, ya que el mecanismo de funcionamiento entre un usuario y este servidor está diseñado para que sea capaz de identificar el mismo archivo sin comprometer el contenido e integridad de este. Esta  llave va a lograr que cuando se cifre este archivo por \textit{n} cantidad de usuarios diferentes que lo poseen, dicho cifrado será igual para la \textit{n} cantidad de usuarios, permitiendo así que en la nube al subir estos cifrados se realice una comparación para que reconozca a quien pertenecen esos cifrados y sólo tenga almacenada una sola copia de este, ahorrando espacio de memoria y costos de infraestructura. 
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=10cm, height=5cm]{./images/Deduplicacion.jpg}
+	\caption{Solución Propuesta}
+	\label{fig:1-3-1}
+\end{figure}
+
+
+
+Puesto que ambas cuestiones, la eliminación de duplicados y la privacidad de la información, son importantes, se ha comenzado a
+proponer mecanismos que solucionen ambos problemas de manera conjunta, que son: Dupless ~\cite{Bellare}, ABS: the apportioned backup
+system. ~\cite{abs}, Flud Backup ~\cite{flud}, SIGOPS Oper. Syst. ~\cite{sigops}, TahoeFS ~\cite{tahoe}.
+
+
 \section{Objetivos} % (fold)
 
     \subsection{Objetivo General} % (fold)
@@ -139,5 +119,6 @@ Es por ello que este trabajo terminal tiene como principal meta atacar esta prob
 		\item Proteger ante los adversarios la información de los usuarios de la nube
 		\item Establecer un esquema de autenticación de usuarios 
 		\item Reducir la pérdida y filtración de información de los usuarios de la nube
+		\item Evitar los ataques por fuerza bruta al contenido de los archivos de usuarios en la nube. 
  	\end{itemize}
     
