--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -144,6 +144,12 @@
 \chapter{Mensajes}
 \cfinput{casosUso/Mensajes/mensajes}
 %------------------------------------------------------------------------------------------------------------------------------------
+\appendix
+\chapter{Lista de acrónimos}
+\cfinput{archivosTex/acronimos}
+\chapter{Glosario de términos}
+\cfinput{archivosTex/GlosarioTerminos}
+
 
 %\include{archivosTex/requerimientos}
 %\include{archivosTex/adv-clasificadores}
